--- a/src/app/component/bio/bio.component.html
+++ b/src/app/component/bio/bio.component.html
@@ -7,39 +7,32 @@
     <section id="biography" class="my-5">
         <h2 class="section-title">Biography</h2>
         <p>
-            Hi there! 👋 I'm Massimiliano, a curious creative with a passionate soul.
-            I've always had a strong <span style="color: #8752dd;">interest in the humanities</span>, which has led me to develop an open and critical mind. My life experiences, enriched by volunteer work and travel, have given me the opportunity to grow and mature in different contexts.
+            Ciao! 👋 Sono Massimiliano, un creativo curioso.
+            Ho sempre avuto un forte <span style="color: #8752dd;">interesse per le discipline umanistiche</span>, che mi hanno portato a sviluppare una mente aperta e critica. Le mie esperienze di vita, arricchite dal volontariato e dai viaggi, mi hanno dato l'opportunità di crescere e maturare in contesti diversi.
         </p>
         <p>
-            In Turin, where I've been living since 2016, I've embarked on a journey in <span style="color: #8752dd;">marketing and communication</span>, which has allowed me to refine my expressive and strategic skills.
-
-            
-            About a year ago, I decided to explore the world of <span style="color: #8752dd;">web development</span>, a field that fascinates me for its ability to combine logic and creativity. Every day, I discover something new, and this motivates me to continue growing and experimenting.
+            A Torino, dove vivo dal 2016, ho intrapreso un percorso nel <span style="color: #8752dd;">marketing e comunicazione</span>, che mi ha permesso di affinare le mie capacità espressive e strategiche.
+                
+            Circa un anno fa, ho deciso di esplorare il mondo dello <span style="color: #8752dd;">sviluppo web</span>, un campo che mi affascina per la sua capacità di unire logica e creatività. Ogni giorno scopro qualcosa di nuovo, e questo mi motiva a continuare a crescere e sperimentare.
         </p>
     </section>
 
 
     <!-- Studies Section -->
     <section id="studies" class="my-5" style="margin-top: 40px;">
-        <h2 class="section-title">Education</h2>
+        <h2 class="section-title">Formazione</h2>
 
         <div>
             <p>
-                My academic journey had a deeply humanistic focus, starting with classical high school and then pursuing two university degrees in Political Science and International Relations at the University of Turin, and in Public and Political Communication at the University of Turin. These studies provided me with a solid foundation to <span style="color: #8752dd;">understand social and cultural dynamics</span>, while also developing <span style="color: #8752dd;">a strong analytical and critical ability</span> that I still apply in my work today.
-            </p>
-            
-            <p>
-                After university, my passion for communication led me to specialize in Marketing at the 24 Ore Business School. This program opened the doors to marketing, where I learned about theory, dynamics, and methodologies. In the digital marketing <span style="color: #8752dd;">many of the logics and tools intersect with developing work</span>, which is a significant advantage!
-            </p>
-            
-            <p>
-                About a year ago, driven by curiosity and a desire for new challenges, I decided to dive into the world of coding. I chose Epicode, a renowned European tech training school, where I completed the <span style="color: #8752dd;">Full Stack Web Developer</span> course 6 months full time. Epicode not only provided me with the technical knowledge needed to become a web developer but also taught me the importance of creativity in problem-solving and creating innovative solutions. 
-            </p>
-            <p>
-                Thanks to this course, I have learned how to combine my marketing experience with new technical skills in developing, creating projects that not only work well but are also aesthetically pleasing and user-centric.
-
-            </p>
-            
+                Il mio percorso accademico ha avuto un orientamento profondamente umanistico, partendo dal liceo classico e proseguendo con due lauree in Scienze Politiche e Relazioni Internazionali presso l'Università di Torino e in Comunicazione Pubblica e Politica presso l'Università di Torino. Questi studi mi hanno fornito una solida base per <span style="color: #8752dd;">comprendere le dinamiche sociali e culturali</span>, sviluppando al contempo <span style="color: #8752dd;">una forte capacità analitica e critica</span> che applico ancora oggi nel mio lavoro.
+                </p>
+                
+                <p>
+                Dopo l'università, la mia passione per la comunicazione mi ha portato a specializzarmi in Marketing presso la 24 Ore Business School. Con questo master mi sono avvicinato al marketing, di cui ho appreso teorie, dinamiche e metodologie. Ho scoperto anche che <span style="color: #8752dd;">molte delle logiche e degli strumenti del marketing digitale si intersecano con l'attività di programmazione</span>, il che è un vantaggio significativo! </p>
+                
+                <p>
+                Circa un anno fa, spinto dalla curiosità e dal desiderio di nuove sfide, ho deciso di immergermi nel mondo dello sviluppo web. Ho scelto Epicode, una rinomata scuola di formazione tecnica europea, dove ho completato il corso <span style="color: #8752dd;">Full Stack Web Developer</span> della durata di 6 mesi a tempo pieno. Epicode non solo mi ha fornito le conoscenze tecniche necessarie per diventare uno sviluppatore web, ma mi ha anche insegnato l'importanza della creatività nella risoluzione dei problemi e nella creazione di soluzioni innovative.
+                </p>
         </div>
 
 
@@ -50,10 +43,10 @@
             <h2 class="section-title" style="margin-top: 100px;">Skills</h2>
             <h3>Marketing Skills</h3>
             <ul>
-                <li><strong><span style="color:#8752dd;">WordPress:</span></strong> Expertise in creating and managing WordPress sites, including theme customization and plugin integration.</li>
-                <li><strong><span style="color: #8752dd;">Google Tools:</span></strong> Proficient in using Google Analytics, Google Ads, and other Google marketing tools to analyze and optimize performance.</li>
-                <li><strong><span style="color: #8752dd;">SEO:</span></strong> Skilled in Search Engine Optimization techniques to enhance website visibility and search rankings.</li>
-                <li><strong><span style="color: #8752dd;">Copywriting:</span></strong> Ability to craft compelling and effective copy for various digital marketing materials.</li>
+                <li><strong><span style="color:#8752dd;">WordPress:</span></strong> Competenza nella creazione e gestione di siti WordPress, inclusa la personalizzazione dei temi e l'integrazione dei plugin.</li>
+                <li><strong><span style="color: #8752dd;">Strumenti Google:</span></strong> Competenza nell'uso di Google Analytics, Google Ads e altri strumenti di marketing per analizzare e ottimizzare le prestazioni.</li>
+                <li><strong><span style="color: #8752dd;">SEO:</span></strong> Esperto in tecniche di ottimizzazione dei motori di ricerca per migliorare la visibilità del sito Web.</li>
+                <li><strong><span style="color: #8752dd;">Copywriting:</span></strong> Capacità di creare testi accattivanti ed efficaci per vari materiali di marketing digitale.</li>
             </ul>
         </div>
         
@@ -61,13 +54,13 @@
         <div class="skill-category">
             <h3>Coding Skills</h3>
             <ul>
-                <li><strong><span style="color: #8752dd;">HTML:</span></strong> Strong understanding of HTML for structuring web content.</li>
-                <li><strong><span style="color: #8752dd;">CSS:</span></strong> Proficient in CSS for styling and layout design.</li>
-                <li><strong><span style="color: #8752dd;">JavaScript:</span></strong> Experience in using JavaScript to create interactive web applications.</li>
-                <li><strong><span style="color: #8752dd;">Angular:</span></strong> Knowledgeable in Angular for building dynamic single-page applications.</li>
-                <li><strong><span style="color: #8752dd;">Java:</span></strong> Familiar with Java for server-side development.</li>
-                <li><strong><span style="color: #8752dd;">Spring Boot:</span></strong> Experience with Spring Boot for creating enterprise-level applications.</li>
-                <li><strong><span style="color: #8752dd;">SQL & PostgreSQL:</span></strong> Proficient in using SQL and PostgreSQL for database management and queries.</li>
+                <li><strong><span style="color: #8752dd;">HTML:</span></strong> Competenza in HTML per la strutturazione di contenuti web.</li>
+                <li><strong><span style="color: #8752dd;">CSS:</span></strong> Competenza in CSS per lo styling e la progettazione del layout.</li>
+                <li><strong><span style="color: #8752dd;">JavaScript:</span></strong> Competenza nell'uso di JavaScript per creare applicazioni web interattive.</li>
+                <li><strong><span style="color: #8752dd;">Angular:</span></strong> Competenza in Angular per la creazione di applicazioni dinamiche a pagina singola.</li>
+                <li><strong><span style="color: #8752dd;">Java:</span></strong> Competenza in Java per lo sviluppo lato server.</li>
+                <li><strong><span style="color: #8752dd;">Spring Boot:</span></strong>Compenteza in Spring Boot per la creazione di applicazioni di livello aziendale.</li>
+                <li><strong><span style="color: #8752dd;">SQL e PostgreSQL:</span></strong>Competenza nell'uso di SQL e PostgreSQL per la gestione e le query del database.</li>
             </ul>
         </div>
 
@@ -75,15 +68,15 @@
         <div class="skill-category">
             <h3>Project Management & Design Tools</h3>
             <ul>
-                <li><strong style="color: #8752dd;"><span>Asana:</span></strong> Experienced in using Asana for project management and team collaboration.</li>
-                <li><strong style="color: #8752dd;"><span>Canva:</span></strong> Proficient in Canva for designing engaging graphics and visual content.</li>
-                <li><strong style="color: #8752dd;"><span>Figma:</span></strong> Skilled in Figma for UI/UX design and prototyping.</li>
+                <li><strong style="color: #8752dd;"><span>Asana:</span></strong> Conoscenza di di Asana per la gestione dei progetti e la collaborazione di gruppo.</li>
+                <li><strong style="color: #8752dd;"><span>Canva:</span></strong> Esperto in Canva per la progettazione di grafiche accattivanti e contenuti visivi.</li>
+                <li><strong style="color: #8752dd;"><span>Figma:</span></strong> Conoscenza di Figma per la progettazione e la prototipazione UI/UX.</li>
             </ul>
         </div>
 
         <!-- Certifications -->
         <div id="certifications" style="margin-top: 100px;" class="certifications">
-            <h3>Certifications</h3>
+            <h3>Certificazioni</h3>
             <div class="row">
                 <!-- Certification Item -->
                 <div class="col-sm-4 col-md-3 col-lg-3 mb-3">
